--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "homepage": "https://github.com/rmkubik/user-image-db#readme",
     "devDependencies": {
         "netlify-lambda": "^0.4.0"
+    },
+    "dependencies": {
+        "mongodb": "^3.1.1"
     }
 }
