--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "netlify-lambda": "^0.4.0"
     },
     "dependencies": {
+        "dotenv": "^6.0.0",
         "mongodb": "^3.1.1"
     }
 }
